# cpp-flatten

./: CMakeLists.txt  README.md
flatten/: flatten.hpp
tests/: CMakeLists.txt  tests.cpp
